--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
   <div class="container">
+    <h2>Isla's Links</h2>
     <h1>SINAPSE ASM 2024</h1>
     <div class="link-container">
       <a href="https://www.dundee.ac.uk/stories/new-dawn-peter" class="link">MRgFUS at Dundee</a>
@@ -20,9 +21,11 @@
     </div>
     <h1>Other links</h1>
     <div class="link-container">
-      <a href="https://gilbertson2209.github.io/thal-val/" class="link">Restless Bandit Game</a>
+      <a href="https://www.sinapse.ac.uk" class="link">SINAPSE (♥)</a>
+      <a href="https://www.dundee.ac.uk" class="link">UoD</a>
+      <a href="https://gilbertson2209.github.io/thal-val/" class="link">Restless Bandit Task (Unity WebGL)</a>
       <a href="https://www.dundee.ac.uk/stories/parkinsons-patients-work-their-brains-harder-stay-motivated"
-        class="link">Motivation for Above ^</a>
+        class="link">Motivation for Above Task</a>
     </div>
   </div>
 </body>
