--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 
   <div class="container">
-    <h2>Isla's Links</h2>
-    <h1>SINAPSE ASM 2024</h1>
+    <h1>Isla's Links June 2024</h1>
     <div class="link-container">
       <a href="https://www.dundee.ac.uk/stories/new-dawn-peter" class="link">MRgFUS at Dundee</a>
       <a href="https://doi.org/10.1002/jmri.21265" class="link">MR Thermometry Review</a>
