--- a/index.html
+++ b/index.html
@@ -11,20 +11,22 @@
 <body>
 
   <div class="container">
-    <h1 style="margin-top: 20px;">Isla's Links August 2024</h1>
+    <h1 style="margin-top: 20px;">Isla's Links 2025 </h1>
     <div class="link-container">
       <a href="https://www.dundee.ac.uk/stories/new-dawn-peter" class="link">MRgFUS at Dundee</a>
+      <a href="https://www.channel5.com/show/michael-mosley-wonders-of-the-human-body/season-1/episode-1"
+        class="link">Wonders of the Human Body (C5)</a>
       <a href="https://doi.org/10.1002/jmri.21265" class="link">MR Thermometry Review</a>
-      <a href="https://doi.org/10.1088/1361-6560/abb7c4" class="link">MRgFUS Dosimetry (McDannold)</a>
-      <a href="https://doi.org/10.1002/mp.13868" class="link">MRgFUS Dosimetry (Seasons, Pichardo)</a>
     </div>
     <h1>Other links</h1>
     <div class="link-container">
-      <a href="https://www.sinapse.ac.uk" class="link">SINAPSE (♥)</a>
+      <a href="https://www.sinapse.ac.uk" class="link">SINAPSE</a>
       <a href="https://www.dundee.ac.uk" class="link">UoD</a>
-      <a href="https://gilbertson2209.github.io/thal-val/" class="link">Restless Bandit Task (Unity WebGL)</a>
+      <a href="https://i-brnrd.github.io/patchLSD/" class="link">Patch Foraging Task</a>
+      <a href="https://gilbertson2209.github.io/thal-val/" class="link">Restless Bandit Task</a>
       <a href="https://www.dundee.ac.uk/stories/parkinsons-patients-work-their-brains-harder-stay-motivated"
         class="link">Motivation for Above Task</a>
+      
     </div>
   </div>
 </body>
